# event-scrapping

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  restart-server.sh
core/: admin.py  apps.py  models.py  scheduler.py  serializers.py  tests.py  urls.py  views.py
core/management/commands/: scrap_event.py
core/migrations/: 0001_initial.py
scrapping_events/: settings.py  wsgi.py
scrapping_events/core/: admin.py  apps.py  serializers.py  tests.py  urls.py  views.py
scrapping_events/core/management/commands/: scrap_event.py
scrapping_events/scrapping_events/: asgi.py  settings.py  urls.py  wsgi.py
